# PissbotV4

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Makefile  Notes  README.rst  Todo.txt  package-lock.json  package.json  partitionTable.csv  run_OTA_server.sh  sdkconfig  version.txt  webServerOld.cpp
Config/: PissbotConfig.json  PissbotConfigUnitTest.json
Test/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  partitionTable.csv  sdkconfig  willItCompile.cpp
Test/main/: example_unit_test_test.c  example_unit_test_test.cpp  test_controlLoop.c
components/HD44780/: CMakeLists.txt  HD44780.c
components/espfs/: component.mk
components/espfs/mkespfsimage/: mkespfsimage
components/espfs/tools/: build-image.py
html/: 3rdpartylicenses.txt  espfs.paths  index.html  main-es2018.js  main.js  polyfills-es2018.js  polyfills-es5.js  polyfills.js  styles.css
main/: ABVTables.h  CMakeLists.txt  ConfigManager.cpp  ConfigManager.h  ConnectionManager.cpp  ConnectionManager.h  Controller.cpp  Controller.h  ControllerMessaging.cpp  ControllerMessaging.h  CppTask.cpp  CppTask.h  DistillerManager.cpp  DistillerManager.h  Filesystem.cpp  Filesystem.h  Filter.cpp  Filter.h  Flowmeter.cpp  Flowmeter.h  LCD.c  LCD.h  MessageDefs.h  MessageServer.cpp  MessageServer.h  OneWireBus.cpp  OneWireBus.h  OneWireBusMessaging.cpp  OneWireBusMessaging.h  PBCommon.h  PBds18b20.cpp  PBds18b20.h  Pump.cpp  Pump.h  SensorManager.cpp  SensorManager.h  SensorManagerMessaging.cpp  SensorManagerMessaging.h  SlowPWM.cpp  SlowPWM.h  (+56 more)
unitTest/: CMakeLists.txt  Makefile  createFlashImg.sh  makeUnitTestImg.sh  runTests.py  sdkconfig
unitTest/main/: CMakeLists.txt  Kconfig  component.mk  example_unit_test_test.c  testMain.c
unitTest/main/test/: includeTestFiles.h  test_ConnectionManager.cpp  test_Controller.cpp  test_DistillerManager.cpp  test_Filter.cpp  test_Flowmeter.cpp  test_MessageServer.cpp  test_OneWireBus.cpp  test_SensorManager.cpp  test_SlowPWM.cpp  test_Thermo.cpp  test_Utilities.cpp  test_Webserver.cpp  test_controlLoop.c  test_controlLoop.h  test_messages.cpp  test_pump.cpp
unitTest/main/testData/: testConfig.h  testControllerConfig.h  testDistillerManagerConfig.h  testFlowmeterConfig.h  testOneWireBusConfig.h  testPumpConfig.h  testSensorManagerConfig.h  testSlowPWMConfig.h  testWebServerConfig.h
